--- a/app.json
+++ b/app.json
@@ -24,7 +24,25 @@
       }
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "manifest": {
+        "name": "ziplan",
+        "short_name": "ziplan",
+        "display": "standalone",
+        "start_url": ".",
+        "icons": [
+          {
+            "src": "./assets/images/ziplanlogo.png",
+            "sizes": "512x512",
+            "type": "image/png"
+          },
+          {
+            "src": "./assets/images/ziplanlogo.png",
+            "sizes": "192x192",
+            "type": "image/png"
+          }
+        ]
+      }
     }
   }
 }
