--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/images/favicon.png?v=2",
+      "favicon": "./assets/images/ziplanlogo.png",
       "manifest": {
         "name": "ziplan",
         "short_name": "ziplan",
@@ -32,12 +32,12 @@
         "start_url": ".",
         "icons": [
           {
-            "src": "./assets/images/ziplanlogo.png?v=2",
+            "src": "./assets/images/ziplanlogo.png",
             "sizes": "512x512",
             "type": "image/png"
           },
           {
-            "src": "./assets/images/ziplanlogo.png?v=2",
+            "src": "./assets/images/ziplanlogo.png",
             "sizes": "192x192",
             "type": "image/png"
           }
